--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "e_book_sync_library"
 version = "0.1.0"
 authors = ["Boris Vinogradov <no111u3@gmail.com>"]
+description = "Synchonize e-book with your local e-library"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
