--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ authors = ["Boris Vinogradov <no111u3@gmail.com>"]
 description = "Synchonize e-book with your local e-library"
 edition = "2018"
 
+[lib]
+name = "e_book_sync_library"
+path = "src/lib.rs"
+
 [dependencies]
 clap = "2.33.0"
 walkdir = "2.2.9"
