--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ path = "src/lib.rs"
 [dependencies]
 clap = "2.33.0"
 walkdir = "2.2.9"
-yaml-rust = "0.4.3"
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.8"
