--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ path = "src/lib.rs"
 
 [dependencies]
 clap = "2.33.0"
+structopt = "0.3"
 walkdir = "2.2.9"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
